--- a/visualise.html
+++ b/visualise.html
@@ -37,11 +37,12 @@
         
         <p>
             Display mode: <select id="annoMode"><option value="indata">text</option><option value="indataTable">table</option></select>
-            Highlight (in table mode): <input type="text" id="highlight" />
+            Highlight: <input type="text" id="highlight" />
             <!--input disabled type="button" value="Update Visualization (Ctrl+Enter)" id="updateVisBtn" onclick="javascript:keyUpFunc();" /-->
             Show dependencies:
-            <label><input type="checkbox" id="basicDep" onchange="keyUpFunc()" checked />Basic</label>
-            <label><input type="checkbox" id="enhancedDep" onchange="keyUpFunc()" checked />Enhanced</label>
+            <label><input type="checkbox" id="basicDep" checked />Basic</label>
+            <label><input type="checkbox" id="enhancedDep" checked />Enhanced</label>
+            <label><input type="checkbox" id="onlyHighlighted" checked />Only highlighted</label>
         </p>
 
         <table class="annoField" id="indataTable" style="width:100%; margin:auto; display:none">
