feat: add option to show only dependencies with multiple labels

--- a/visualise.html
+++ b/visualise.html
@@ -37,6 +37,7 @@
         <br>Show in the graph:
         <br><label><input type="checkbox" id="basicDep" checked />Basic dependencies</label>
         <br><label><input type="checkbox" id="enhancedDep" checked />Enhanced dependencies</label>
+        <br><label><input type="checkbox" id="onlyMultipleEnhanced" />Only the enhanced deps with multiple labels</label>
         <br><label><input type="checkbox" id="onlyHighlighted" disabled />Only highlighted tokens</label>
         
         <hr>
