--- a/visualise.html
+++ b/visualise.html
@@ -30,7 +30,7 @@
         CoNLL-U display mode: <select id="annoMode"><option value="indata">text</option><option value="indataTable">table</option></select>
 
         <br>
-        <br>Highlight (in table mode): <input type="text" id="highlight" />
+        <br>Highlight: <input type="text" id="highlight" /> (highlight will appear in table mode and in the graph visualization)
         
         <!--input disabled type="button" value="Update Visualization (Ctrl+Enter)" id="updateVisBtn" onclick="javascript:keyUpFunc();" /-->
         <br>
@@ -38,7 +38,7 @@
         <br><label><input type="checkbox" id="basicDep" checked />Basic dependencies</label>
         <br><label><input type="checkbox" id="enhancedDep" checked />Enhanced dependencies</label>
         <br><label><input type="checkbox" id="onlyMultipleEnhanced" />Only the enhanced deps with multiple labels</label>
-        <br><label><input type="checkbox" id="onlyHighlighted" disabled />Only highlighted tokens</label>
+        <br><label><input type="checkbox" id="onlyHighlighted" disabled />Only dependencies from highlighted tokens</label>
         
         <hr>
 
