feat: recarregar corpus mesmo que seja o mesmo corpus

--- a/visualise.html
+++ b/visualise.html
@@ -21,7 +21,7 @@
 
         <p>
             Load corpus from file:
-            <input type="file" id="filename">
+            <input type="file" id="filename" onclick="$('#filename').val('')">
             <div id="detected">Waiting sentence</div>
         </p>
 
