feat: possibilidade de pressionar enter na caixa jumpText

--- a/visualise.html
+++ b/visualise.html
@@ -46,7 +46,7 @@
         <input disabled type="button" value="Previous Sentence" id="prevSenBtn" onclick="javascript:prevSenSent();" />
         <input disabled type="button" value="Next Sentence" id="nextSenBtn" onclick="javascript:nextSenSent();" />
         <input disabled type="button" value="Export Corpus" id="exportBtn" onclick="javascript:exportCorpora();" />
-        Jump to: <input disabled type="text" id="jumpText"> <input disabled type="button" id="jumpGo" value="Go">
+        Jump to: <input disabled type="text" id="jumpText" style="width:50px"> <input disabled type="button" id="jumpGo" value="Go">
 
         <hr>
 
