--- a/visualise.html
+++ b/visualise.html
@@ -69,5 +69,7 @@
 
     <!-- support for embedded visualizations -->
     <script type="text/javascript" src="./lib/ext/body.load.js"></script>
+    <hr>
+    <img src="https://souelvis.dev/ui-verbobrasil/img/logos.png" style="height:150px;">
 </body>
 </html>
