--- a/visualise.html
+++ b/visualise.html
@@ -30,7 +30,8 @@
         CoNLL-U display mode: <select id="annoMode"><option value="indata">text</option><option value="indataTable">table</option></select>
 
         <br>
-        <br>Highlight: <input type="text" id="highlight" /> (highlight will appear in table mode and in the graph visualization)
+        <br>Highlight: <input type="text" id="highlight" />
+        <br>(highlights tokens in table mode and in the graph visualization based on any annotation)
         
         <!--input disabled type="button" value="Update Visualization (Ctrl+Enter)" id="updateVisBtn" onclick="javascript:keyUpFunc();" /-->
         <br>
