mudanças para facilitar printscreen

--- a/visualise.html
+++ b/visualise.html
@@ -72,5 +72,9 @@
     <script type="text/javascript" src="./lib/ext/body.load.js"></script>
     <hr>
     <img src="https://souelvis.dev/ui-verbobrasil/img/logos.png" style="height:150px;">
+    <style>
+        svg { padding-bottom: 10px; }
+        .sentnum { display: none }
+    </style>
 </body>
 </html>
