--- a/visualise.html
+++ b/visualise.html
@@ -73,7 +73,7 @@
     <hr>
     <img src="https://souelvis.dev/ui-verbobrasil/img/logos.png" style="height:150px;">
     <style>
-        svg { padding-bottom: 10px; }
+        svg { padding-bottom: 10px; padding-top: 10px; background-color: white; zoom: 1.2; }
         .sentnum { display: none }
     </style>
 </body>
