shortcuts to next and previous sentence

--- a/visualise.html
+++ b/visualise.html
@@ -44,8 +44,8 @@
         <hr>
 
         Current Sentence: <span id="currentsen">00</span> / <span id="totalsen">00</span>&nbsp;
-        <input disabled type="button" value="Previous Sentence" id="prevSenBtn" onclick="javascript:prevSenSent();" />
-        <input disabled type="button" value="Next Sentence" id="nextSenBtn" onclick="javascript:nextSenSent();" />
+        <input disabled type="button" value="Previous Sentence (Ctrl+P)" id="prevSenBtn" onclick="javascript:prevSenSent();" />
+        <input disabled type="button" value="Next Sentence (Ctrl+N)" id="nextSenBtn" onclick="javascript:nextSenSent();" />
         <input disabled type="button" value="Export Corpus" id="exportBtn" onclick="javascript:exportCorpora();" />
         Jump to: <input disabled type="text" id="jumpText" style="width:50px"> <input disabled type="button" id="jumpGo" value="Go">
 
