--- a/visualise.html
+++ b/visualise.html
@@ -13,9 +13,12 @@
 
 <body>
     <div id="content" style="margin-bottom: 200px;">
-        <h1>UD Annotation and Visualization</h1>
-        <p>Forked from <a href="https://jonorthwash.github.io/visualise.html" target="_blank">Jonorthwash</a> by <a target="_blank" href="https://souelvis.dev/sobre">Elvis de Souza</a></p>
-        <p>Only tested for sentences encoded in the CoNLL-U format</p>        
+        <center>
+            <a href="https://sites.google.com/icmc.usp.br/poetisa" target="_blank"><img src="https://souelvis.dev/ui-verbobrasil/img/logos.png"></a>
+            <h1>UD Annotation and Visualization</h1>
+            <p>Upload a CoNLL-U file or paste a sentence annotation in the box below to visualize its syntax tree and enhanced graph annotation.<br>Edit the annotation from the box or in table mode and export the treebank with the modified annotation.</p>
+            <p>Forked from <a href="https://jonorthwash.github.io/visualise.html" target="_blank">Jonorthwash</a> by <a target="_blank" href="https://souelvis.dev/sobre">Elvis de Souza</a>.<br>Only tested for sentences encoded in the CoNLL-U format.</p>
+        </center>
 
         <hr>
 
@@ -69,9 +72,7 @@
     </div>
 
     <!-- support for embedded visualizations -->
-    <script type="text/javascript" src="./lib/ext/body.load.js"></script>
-    <hr>
-    <img src="https://souelvis.dev/ui-verbobrasil/img/logos.png" style="height:150px;">
+    <script type="text/javascript" src="./lib/ext/body.load.js"></script>    
     <style>
         svg { padding-bottom: 10px; padding-top: 10px; background-color: white; zoom: 1.2; }
         .sentnum { display: none }
