jump to sent_id

--- a/visualise.html
+++ b/visualise.html
@@ -50,7 +50,7 @@
         <input disabled type="button" value="Previous Sentence (Ctrl ←)" id="prevSenBtn" onclick="javascript:prevSenSent();" />
         <input disabled type="button" value="Next Sentence (Ctrl →)" id="nextSenBtn" onclick="javascript:nextSenSent();" />
         <input disabled type="button" value="Export Corpus" id="exportBtn" onclick="javascript:exportCorpora();" />
-        Jump to: <input disabled type="text" id="jumpText" style="width:50px"> <input disabled type="button" id="jumpGo" value="Go">
+        Jump to (sent. no. or sent_id): <input disabled type="text" id="jumpText" style="width:200px"> <input disabled type="button" id="jumpGo" value="Go">
 
         <hr>
 
