highlight multiple tokens

--- a/visualise.html
+++ b/visualise.html
@@ -33,8 +33,7 @@
         CoNLL-U display mode: <select id="annoMode"><option value="indata">text</option><option value="indataTable">table</option></select>
 
         <br>
-        <br>Highlight: <input type="text" id="highlight" />
-        <br>(highlights tokens in table mode and in the graph visualization based on any annotation)
+        <br>Highlight Tokens: <input type="text" id="highlight" /> (comma-separated, highlights tokens in table mode and in the graph visualization based on any piece of string)
         
         <!--input disabled type="button" value="Update Visualization (Ctrl+Enter)" id="updateVisBtn" onclick="javascript:keyUpFunc();" /-->
         <br>
