--- a/visualise.html
+++ b/visualise.html
@@ -25,7 +25,10 @@
         <p>
             Load corpus from file:
             <input type="file" id="filename" onclick="$('#filename').val('')">
-            <div id="detected">Waiting sentence</div>
+        </p>
+        <p>
+            Export corpus to file:
+            <input disabled type="button" value="Choose File..." id="exportBtn" onclick="javascript:exportCorpora();" />
         </p>
 
         <hr>
@@ -44,12 +47,12 @@
         
         <hr>
 
-        Current Sentence: <span id="currentsen">00</span> / <span id="totalsen">00</span>&nbsp;
-        <input disabled type="button" value="Previous Sentence (Ctrl ←)" id="prevSenBtn" onclick="javascript:prevSenSent();" />
-        <input disabled type="button" value="Next Sentence (Ctrl →)" id="nextSenBtn" onclick="javascript:nextSenSent();" />
-        <input disabled type="button" value="Export Corpus" id="exportBtn" onclick="javascript:exportCorpora();" />
-        Jump to (sent. no. or sent_id): <input disabled type="text" id="jumpText" style="width:200px"> <input disabled type="button" id="jumpGo" value="Go">
-
+        <input disabled type="button" value="Previous Sentence (Ctrl Alt ← )" id="prevSenBtn" onclick="javascript:prevSenSent();" />
+        <input disabled type="button" value="Next Sentence (Ctrl Alt →)" id="nextSenBtn" onclick="javascript:nextSenSent();" />
+        <span class="sentence-controls">Current Sentence: <span id="currentsen">00</span> / <span id="totalsen">00</span></span>
+        <span class="sentence-controls">
+            Jump to (sent. no. or sent_id): <input disabled type="text" id="jumpText" style="width:200px"> <input disabled type="button" id="jumpGo" value="Go">
+        </span>
         <hr>
 
         <table class="annoField" id="indataTable" style="margin:auto; display:none">
@@ -72,11 +75,16 @@
     <!-- support for embedded visualizations -->
     <script type="text/javascript" src="./lib/ext/body.load.js"></script>    
     <style>
+        .sentence-controls {
+            background-color: lightgray;
+            padding:5px;
+            border-radius:5px;
+        }
         svg { 
+            zoom: 1.2;
             padding-bottom: 10px; 
             padding-top: 10px; 
             background-color: white;    
-            zoom: 1.2; 
         }
         .sentnum { display: none }
         .embedding { cursor: grab; /* Makes it look draggable */ }
